--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -2,7 +2,7 @@
 <!-- Rates -->
 <article class="bg-striped px-10 pt-5 pb-10 mb-10 shadow-xl">
     <h2 class="text-4xl mb-5 flex max-md:flex-col ">
-        <span>Rates</span>
+        <span>Rates&nbsp;</span>
         <span class="italic text-gray-400 text-3xl max-md:text-lg">
             (Membership required)
         </span>
@@ -76,7 +76,11 @@
 
 
 <!-- Memberships -->
-<h2 class="text-4xl mb-5">Annual Memberships</h2>
+<!-- <h2 class="text-4xl mb-5">Annual Memberships</h2> -->
+<h2 class="text-4xl mb-5 flex max-md:flex-col md:text-center">
+    <span>Annual&nbsp;</span>
+    <span>Memberships</span>
+</h2>
 <article class="grid grid-cols-4 gap-y-5 mb-10 max-md:hidden">
     <table class="col-span-3 border-separate border-spacing-2">
         <!-- Headers -->
@@ -146,7 +150,6 @@
     <div class="rounded border-2 border-amber-300 p-5 shadow-xl">
         <div class="mb-2 flex justify-between">
             <strong class="text-amber-300 text-3xl">Limited</strong>
-            <span class="text-xl"></span>
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
                 <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
             </svg>
@@ -164,7 +167,6 @@
     <div class="rounded border-2 border-sky-500 p-5 shadow-xl">
         <div class="mb-2 flex justify-between">
             <strong class="text-sky-500 text-3xl">Standard</strong>
-            <span class="text-xl"></span>
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
                 <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
             </svg>
@@ -183,7 +185,6 @@
     <div class="rounded border-2 border-violet-600 p-5 shadow-xl">
         <div class="mb-2 flex justify-between">
             <strong class="text-violet-600 text-3xl">VIP</strong>
-            <span class="text-xl"></span>
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
                 <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
             </svg>
