--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -145,16 +145,17 @@
 </article>
 
 <!-- Memberships mobile -->
-<article class="grid grid-rows-3 gap-5 mb-10 md:hidden">
+<article class="mb-10 md:hidden">
     <!-- Limited -->
-    <div class="rounded border-2 border-amber-300 p-5 shadow-xl">
-        <div class="mb-2 flex justify-between">
+    <div class="rounded border-2 border-amber-300 p-5 mb-5 shadow-xl">
+        <div class="mb-2 flex justify-between" (click)="toggleLimited()">
             <strong class="text-amber-300 text-3xl">Limited</strong>
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+            <svg [class.rotate-180]="limited" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                width="24px" fill="#e8eaed">
                 <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
             </svg>
         </div>
-        <ul class="list-disc ml-5 mb-3 hidden">
+        <ul class="list-disc ml-5 mb-3" [hidden]="!limited">
             <li>Ability to book 5 days in advance</li>
             <li>Weekday Open Play $9/session</li>
         </ul>
@@ -163,15 +164,17 @@
             <p class="text-sm mt-3 ml-1">/year</p>
         </span>
     </div>
+
     <!-- Standard -->
-    <div class="rounded border-2 border-sky-500 p-5 shadow-xl">
-        <div class="mb-2 flex justify-between">
+    <div class="rounded border-2 border-sky-500 mb-5 p-5 shadow-xl">
+        <div class="mb-2 flex justify-between" (click)="toggleStandard()">
             <strong class="text-sky-500 text-3xl">Standard</strong>
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+            <svg [class.rotate-180]="standard" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                width="24px" fill="#e8eaed">
                 <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
             </svg>
         </div>
-        <ul class="list-disc ml-5 mb-3 hidden">
+        <ul class="list-disc ml-5 mb-3" [hidden]="!standard">
             <li>Ability to book 2 weeks in advance</li>
             <li>Weekday Open Play $8/session</li>
             <li>Early access to tournaments & special events</li>
@@ -181,15 +184,17 @@
             <p class="text-sm mt-3 ml-1">/year</p>
         </span>
     </div>
+
     <!-- VIP -->
-    <div class="rounded border-2 border-violet-600 p-5 shadow-xl">
-        <div class="mb-2 flex justify-between">
+    <div class="rounded border-2 border-violet-600 mb-10 p-5 shadow-xl">
+        <div class="mb-2 flex justify-between" (click)="toggleVIP()">
             <strong class="text-violet-600 text-3xl">VIP</strong>
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+            <svg [class.rotate-180]="vip" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
+                width="24px" fill="#e8eaed">
                 <path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z" />
             </svg>
         </div>
-        <ul class="list-disc ml-5 mb-3 hidden">
+        <ul class="list-disc ml-5 mb-3" [hidden]="!vip">
             <li>Ability to book 6 months in advance</li>
             <li>Weekday Open Play $7/session</li>
             <li>Early access to tournaments & special events</li>
