Fix footer on display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
   </button>
 </div>
 
-<footer class="fixed bottom-0 w-screen">
+<footer class="md:flex-col max-md:fixed bottom-0 w-screen">
   <div class="p-5 flex justify-between items-center bg-zinc-900">
     <a href="https://www.facebook.com/groups/380792678025831/" target="_blank">
       <img src="facebook.png">
