better responsive design for tablets

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,5 +1,5 @@
 <h1 class="text-5xl text-center my-16">Frequently Asked Questions</h1>
-<article class="md:mx-72">
+<article class="xl:mx-72">
     <p class="text-center mb-10">
         Please reach us at
         <a href="mailto:info@dinkspickleballdsm.com">{{
