--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <!-- desktop -->
-  <nav class="grid grid-cols-12 p-5 max-md:hidden">
+  <nav class="grid grid-cols-12 p-5 max-xl:hidden">
     <div class="col-span-2 m-2"><a [routerLink]="['/home']"><img src="combinedIconHorizontal.png" /></a></div>
     <div class="col-span-9 text-center pt-2">
       <a class="nav-button" [routerLink]="['/home']" routerLinkActive="active-nav-button"
@@ -24,15 +24,17 @@
   </nav>
 
   <!-- mobile -->
-  <nav class="grid grid-cols-6 p-5 md:hidden">
-    <button class="text-dinks-blue" (click)="toggleMenu()">
+  <nav class="flex flex-col justify-start items-center p-5 xl:hidden">
+    <button class="absolute top-6 left-5 text-dinks-blue" (click)="toggleMenu()">
       <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px">
         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
       </svg>
     </button>
-    <div class="col-span-5 w-64"><a [routerLink]="['/home']"><img src="combinedIconHorizontal.png" /></a></div>
+    <button [routerLink]="['/home']">
+      <img class="h-8" src="combinedIconHorizontal.png" />
+    </button>
     @if(menu){
-    <div class="flex flex-col -translate-x-3 mt-5 w-screen">
+    <div class="flex flex-col mt-5 -ml-3 self-start">
       <a class="nav-button" [routerLink]="['/home']" routerLinkActive="active-nav-button" ariaCurrentWhenActive="page"
         (click)="toggleMenu()">Home</a>
       <a class="nav-button" [routerLink]="['/rates-memberships']" routerLinkActive="active-nav-button"
@@ -47,31 +49,27 @@
         (click)="toggleMenu()">FAQ</a>
     </div>
     }
-    <div class="col-span-1 mt-1 max-md:hidden" [routerLink]="['/reserve']">
-      <button class="rounded bg-dinks-red hover:bg-dinks-red-dark text-white text-md px-5 py-2">
-        Reserve court
-      </button>
-    </div>
   </nav>
 </header>
 
-<main class="container mx-auto px-4 pt-16 max-md:mb-52">
+<main class="container m-auto px-4 pt-16 mb-52">
   <router-outlet></router-outlet>
 </main>
 
-<div class="md:hidden fixed bottom-20 p-4 w-screen z-10" [routerLink]="['/reserve']">
-  <button class="rounded bg-dinks-red hover:bg-dinks-red-dark w-full text-white text-md px-5 py-2">
-    Reserve court
-  </button>
-</div>
 
-<footer class="md:flex-col max-md:fixed bottom-0 w-screen">
-  <div class="p-5 flex justify-between items-center bg-zinc-900">
-    <a href="https://www.facebook.com/groups/380792678025831/" target="_blank">
-      <img src="facebook.png">
-    </a>
-    <a [routerLink]="['/become-a-sponsor']">
-      Become a sponsor!
-    </a>
+<footer class="fixed bottom-0 w-screen">
+  <div class="p-5 flex flex-col bg-zinc-900">
+    <button [routerLink]="['/reserve']"
+      class="rounded bg-dinks-red hover:bg-dinks-red-dark w-full text-white text-md mb-5 px-5 py-2 xl:hidden">
+      Reserve court
+    </button>
+    <div class="flex justify-between items-center">
+      <a href="https://www.facebook.com/groups/380792678025831/" target="_blank">
+        <img src="facebook.png">
+      </a>
+      <a [routerLink]="['/become-a-sponsor']">
+        Become a sponsor!
+      </a>
+    </div>
   </div>
 </footer>
