--- a/src/app/become-a-sponsor/become-a-sponsor.component.html
+++ b/src/app/become-a-sponsor/become-a-sponsor.component.html
@@ -6,8 +6,7 @@
     </p>
     <article class="grid grid-cols-3 gap-12 h-96">
         <figure class="rounded bg-gray-800 h-full w-full">
-            <div class="relative rounded bg-amber-300 h-full w-full -translate-x-1.5 translate-y-1.5"
-                style="z-index: -1;">
+            <div class="relative rounded bg-amber-300 h-full w-full -translate-x-1.5 translate-y-1.5 z-[-1]">
             </div>
             <div class="flex flex-col py-8 -translate-y-full shadow-xl">
                 <div class="text-center mb-5">
@@ -25,9 +24,7 @@
             </div>
         </figure>
         <figure class="rounded bg-gray-800 h-full w-full">
-            <div class="relative rounded bg-sky-500 h-full w-full -translate-x-1.5 translate-y-1.5"
-                style="z-index: -1;">
-            </div>
+            <div class="relative rounded bg-sky-500 h-full w-full -translate-x-1.5 translate-y-1.5 z-[-1]"></div>
             <div class="flex flex-col py-8 -translate-y-full shadow-xl">
                 <div class="text-center mb-5">
                     <strong class="text-3xl">Premier Entry Sponsor</strong>
@@ -43,9 +40,7 @@
             </div>
         </figure>
         <figure class="rounded bg-gray-800 h-full w-full">
-            <div class="relative rounded bg-violet-600 h-full w-full -translate-x-1.5 translate-y-1.5"
-                style="z-index: -1;">
-            </div>
+            <div class="relative rounded bg-violet-600 h-full w-full -translate-x-1.5 translate-y-1.5  z-[-1]"></div>
             <div class="rounded flex flex-col py-8 -translate-y-full shadow-xl">
                 <div class="text-center mb-5">
                     <strong class="text-3xl">"The Big Dill" Court Sponsor</strong>
