--- a/src/app/leagues/leagues-and-tourneys.component.html
+++ b/src/app/leagues/leagues-and-tourneys.component.html
@@ -25,22 +25,24 @@
             }
         </ul>
 
+
         <div class="flex max-xl:flex-col max-xl:mb-5 justify-between">
             <div class="self-center max-xl:mb-5"><strong>{{l.winnings}}</strong></div>
+            <div class="self-center w-full px-2 mb-5">
+                @if(l.price?.amount){
+                <div class="rounded flex border border-green-600 text-green-600 py-1 justify-center w-full lg:hidden">
+                    <p class="text-3xl">${{l.price?.amount}}</p>
+                    @if(l.price?.per){<p class="text-lg mt-2 ml-1">/{{l.price?.per}}</p>}
+                </div>
+                }
+            </div>
             <div class="flex flex-col">
-                <a class="rounded bg-dinks-red hover:bg-dinks-red-dark m-2 p-2 text-center" [href]="l.registrationLink">
+                <a class="rounded bg-dinks-red hover:bg-dinks-red-dark mb-1 p-2 text-center"
+                    [href]="l.registrationLink">
                     Register
                 </a>
-                <p class="text-gray-400 text-sm self-end pr-2">*Must be a dinks member to participate</p>
+                <p class="text-gray-400 text-sm text-center pr-2">*Must be a dinks member to participate</p>
             </div>
-        </div>
-
-        <div>@if(l.price?.amount){
-            <div class="rounded flex border border-green-600 text-green-600 p-1 px-5 justify-center lg:hidden">
-                <p class="text-5xl">${{l.price?.amount}}</p>
-                @if(l.price?.per){<p class="text-xl mt-6 ml-1">/{{l.price?.per}}</p>}
-            </div>
-            }
         </div>
     </figure>
     }
