desktop about us page, font change for headers

--- a/src/app/become-a-sponsor/become-a-sponsor.component.html
+++ b/src/app/become-a-sponsor/become-a-sponsor.component.html
@@ -1,5 +1,5 @@
 <main>
-    <h1 class="text-5xl text-center my-16">Become a sponsor!</h1>
+    <h1 class=" text-5xl text-center my-16 font-header">Become a sponsor!</h1>
     <p class="mx-24 my-16 px-48 text-center text-lg">
         We have a variety of sponsorship opportunities that help us deliver on our mission to the pickleball community
         while at the same time providing you an opportunity to connect your business with the broader community.
