--- a/src/app/leagues/leagues-and-tourneys.component.html
+++ b/src/app/leagues/leagues-and-tourneys.component.html
@@ -1,8 +1,8 @@
-<h1 class="text-5xl text-center my-16">Leagues & Tournaments</h1>
+<h1 class=" text-5xl text-center my-16 font-header">Leagues & Tournaments</h1>
 
 <!-- Leagues -->
 <section class="mb-10">
-    <h2 class="text-4xl mb-5 max-xl:text-center">Leagues</h2>
+    <h2 class="text-4xl mb-5 max-xl:text-center font-header">Leagues</h2>
     @for(l of leagues; track l){
 
     <figure class="flex flex-col rounded border-2 border-neutral-400 w-full p-10 shadow-xl">
@@ -50,7 +50,7 @@
 
 <!-- Tournaments -->
 <section>
-    <h2 class="text-4xl mb-5 max-xl:text-center">Tournaments</h2>
+    <h2 class="text-4xl mb-5 max-xl:text-center font-header">Tournaments</h2>
     <figure class="grid xl:grid-cols-3 max-xl:grid-cols-1 gap-5">
         @for(t of tournaments; track t){
         <div class="grid rounded border-2 content-between border-neutral-400 p-5 shadow-xl">
