--- a/src/app/memberships/memberships.component.html
+++ b/src/app/memberships/memberships.component.html
@@ -1,74 +1,63 @@
-<h1 class="text-5xl text-center my-16">Rates & Memberships</h1>
+<h1 class=" text-5xl text-center my-16 font-header">Rates & Memberships</h1>
 <!-- Rates -->
 <article class="bg-striped px-10 pt-5 pb-10 mb-10 shadow-xl">
-    <h2 class="text-4xl mb-5 flex max-md:flex-col ">
-        <span>Rates&nbsp;</span>
-        <span class="italic text-gray-400 text-3xl max-md:text-lg">
+    <h2 class="text-4xl font-header mb-5 flex max-md:flex-col">
+        Rates&nbsp;
+        <em class="text-gray-400 text-3xl max-md:text-lg">
             (Membership required)
-        </span>
+        </em>
     </h2>
     <!-- Open play -->
-    <h3 class="text-2xl text-center mb-5">Open play</h3>
+    <h3 class="text-2xl text-center font-header mb-5">Open play</h3>
     <section class="grid grid-cols-2 max-md:grid-cols-1 gap-5 text-center">
-        <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
-            <div class="mb-2"><strong class="text-sky-600">Monday-Friday</strong></div>
-            <div class="mb-2">
-                <span class="flex justify-center">
-                    <p class="text-3xl">$7/$8/$9</p>
-                    <p class="mt-3 ml-1">/hour</p>
-                </span>
-                <p class="text-xl">determined by membership</p>
-            </div>
+        <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5 flex flex-col">
+            <strong class="text-sky-600">Monday-Friday</strong>
+            <p class="flex justify-center">
+                <span class="text-3xl">$7/$8/$9</span>
+                <span class="self-end">/hour</span>
+            </p>
+            <p class="text-xl">determined by membership</p>
             <p>8AM-11AM</p>
         </div>
 
         <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
-            <div class="mb-2"><strong class="text-sky-600">Friday, Saturday, Sunday</strong></div>
-            <div class="mb-2">
-                <span class="flex justify-center">
-                    <p class="text-3xl">$7/$8/$9</p>
-                    <p class="mt-3 ml-1">/hour</p>
-                </span>
-                <p class="text-xl">determined by membership</p>
-            </div>
+            <strong class="text-sky-600">Friday, Saturday, Sunday</strong>
+            <p class="flex justify-center">
+                <span class="text-3xl">$7/$8/$9</span>
+                <span class="self-end">/hour</span>
+            </p>
+            <p class="text-xl">determined by membership</p>
             <p>8PM-11PM</p>
         </div>
     </section>
 
     <!-- Court reservations desktop -->
-    <h3 class="text-2xl text-center mb-5 mt-10">Court reservations</h3>
+    <h3 class="text-2xl text-center font-header mb-5 mt-10">Court reservations</h3>
     <section class="grid grid-cols-3 max-md:grid-cols-1 gap-5 text-center">
-
         <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
-            <div class="mb-2"><strong class="text-sky-600">Monday-Friday</strong></div>
-            <div class="mb-2">
-                <span class="flex justify-center">
-                    <p class="text-3xl">$16</p>
-                    <p class="mt-3 ml-1">/hour</p>
-                </span>
-            </div>
+            <strong class="text-sky-600">Monday-Friday</strong>
+            <p class="flex justify-center">
+                <span class="text-3xl">$16</span>
+                <span class="self-end">/hour</span>
+            </p>
             <p>6AM-4PM</p>
         </div>
 
         <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
-            <div class="mb-2"><strong class="text-sky-600">Monday-Friday (Evenings)</strong></div>
-            <div class="mb-2">
-                <span class="flex justify-center">
-                    <p class="text-3xl">$22</p>
-                    <p class="mt-3 ml-1">/hour</p>
-                </span>
-            </div>
+            <strong class="text-sky-600">Monday-Friday (Evenings)</strong>
+            <p class="flex justify-center">
+                <span class="text-3xl">$22</span>
+                <span class="self-end">/hour</span>
+            </p>
             <p>4PM-12AM</p>
         </div>
 
-        <div class="rounded border-2 border-neutral-400 bg-gray-900 transparent-20 p-5">
-            <div class="mb-2"><strong class="text-sky-600">Saturday/Sunday</strong></div>
-            <div class="mb-2">
-                <span class="flex justify-center">
-                    <p class="text-3xl">$28</p>
-                    <p class="mt-3 ml-1">/hour</p>
-                </span>
-            </div>
+        <div class="rounded border-2 border-neutral-400 bg-gray-900 p-5">
+            <strong class="text-sky-600">Saturday/Sunday</strong>
+            <p class="flex justify-center">
+                <span class="text-3xl">$28</span>
+                <span class="self-end">/hour</span>
+            </p>
             <p>6AM-12AM</p>
         </div>
     </section>
@@ -76,11 +65,8 @@
 
 
 <!-- Memberships -->
-<h2 class="text-4xl mb-5 flex max-xl:flex-col max-xl:text-center">
-    <span>Annual&nbsp;</span>
-    <span>Memberships</span>
-</h2>
 <article class="grid grid-cols-4 gap-y-5 mb-10 max-lg:hidden">
+    <h2 class="col-span-4 flex text-4xl font-header">Annual Memberships</h2>
     <table class="col-span-3 border-separate border-spacing-2">
         <!-- Headers -->
         <thead>
@@ -94,8 +80,8 @@
                 </th>
             </tr>
         </thead>
-        <!-- Limited -->
         <tbody>
+            <!-- Limited -->
             <tr>
                 <td class="rounded border-2 border-amber-300 p-5 text-xl">Limited</td>
                 <td class="rounded border-2 border-amber-300 p-5 text-xl">$45</td>
@@ -103,9 +89,7 @@
                 <td class="rounded border-2 border-amber-300 p-5">5 days in advance</td>
                 <td class="rounded border-2 border-amber-300 text-lg text-red-600 p-3">✘</td>
             </tr>
-        </tbody>
-        <!-- Standard -->
-        <tbody>
+            <!-- Standard -->
             <tr>
                 <td class="rounded border-2 border-sky-500 p-5 text-xl">Standard</td>
                 <td class="rounded border-2 border-sky-500 p-5 text-xl">$125</td>
@@ -113,9 +97,7 @@
                 <td class="rounded border-2 border-sky-500 p-5">2 weeks in advance</td>
                 <td class="rounded border-2 border-sky-500 text-xl text-green-600 p-3">✓</td>
             </tr>
-        </tbody>
-        <!-- VIP -->
-        <tbody>
+            <!-- VIP -->
             <tr>
                 <td class="rounded border-2 border-violet-600 p-5 text-xl">VIP</td>
                 <td class="rounded border-2 border-violet-600 p-5 text-xl">$195</td>
@@ -125,23 +107,25 @@
             </tr>
         </tbody>
     </table>
+
     <div class="relative m-2">
-        <div class="relative bg-dotted w-2/3 h-2/3 translate-x-1/2  z-[-1]"></div>
-        <div class="absolute rounded bg-dinks-blue p-6 w-5/6 shadow-xl bottom-0">
-            <div class="mb-3"><strong class="text-xl">All tiers include:</strong></div>
-            <p class="pb-7">
+        <div class="absolute bg-dotted w-2/3 h-2/3 top-0 right-0"></div>
+        <div class="absolute rounded bg-dinks-blue w-5/6 h-4/5 bottom-0 left-0 shadow-xl p-6">
+            <div class="flex flex-col h-full justify-between">
+                <strong class="text-xl">All tiers include:</strong>
                 Personalized door access upon signing up for open play or booking a
                 court
-            </p>
-            <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2 mt-4 w-full" (click)="toggleModal()">
-                Sign me up!
-            </button>
+                <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2" (click)="toggleModal()">
+                    Sign me up!
+                </button>
+            </div>
         </div>
     </div>
 </article>
 
 <!-- Memberships mobile -->
 <article class="mb-10 lg:hidden">
+    <h2 class="text-4xl mb-5 text-center font-header">Annual Memberships</h2>
     <!-- Limited -->
     <div class="rounded border-2 border-amber-300 p-5 mb-5 shadow-xl">
         <div class="mb-2 flex justify-between" (click)="toggleLimited()">
@@ -200,37 +184,37 @@
             <p class="text-sm mt-3 ml-1">/year</p>
         </span>
     </div>
-    <div class="relative rounded m-4 py-4">
-        <div class="absolute bg-dotted h-full w-full rotate-3 z-[-1]"></div>
-        <div class="bg-dinks-blue p-6 shadow-xl w-full mx-auto mt-8">
-            <div class="pb-7">
-                <div class="mb-3"><strong class="text-xl">All tiers include:</strong></div>
-                <p>
-                    Personalized door access upon signing up for open play or booking a
-                    court
-                </p>
+
+    <div class="relative m-5 h-48">
+        <div class="absolute bg-dotted w-full h-full rotate-2">
+        </div>
+        <div
+            class="absolute rounded bg-dinks-blue w-11/12 h-5/6 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 shadow-xl p-6">
+            <div class="flex flex-col h-full justify-between">
+                <strong class="text-xl">All tiers include:</strong>
+                Personalized door access upon signing up for open play or booking a
+                court
+                <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2" (click)="toggleModal()">
+                    Sign me up!
+                </button>
             </div>
-            <button class="bg-dinks-red hover:bg-dinks-red-dark rounded py-2 mt-4 w-full" (click)="toggleModal()">
-                Sign me up!
-            </button>
         </div>
     </div>
 </article>
 
 @if (showModal) {
 <article>
-    <figure class="bg-smoked-background fixed w-screen h-screen top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
+    <div class="bg-smoked-background fixed w-screen h-screen top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"
         (click)="toggleModal()">
-    </figure>
-    <figure
-        class="bg-dinks-blue rounded fixed py-8 px-5 max-md:w-11/12 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+    </div>
+    <div
+        class="bg-dinks-blue rounded fixed max-xl:text-center py-8 px-5 max-md:w-11/12 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
         <!-- X button -->
         <button (click)="toggleModal()" class="text-2xl absolute p-3 top-0 right-1">✕</button>
 
         <!-- Content -->
-        <div class="m-5"><strong class="text-3xl">How to sign up for a membership:</strong>
-        </div>
-        <div class="grid md:grid-cols-2 max-md:grid-cols-1 gap-8 p-5">
+        <strong class="text-3xl">How to sign up for a membership:</strong>
+        <div class="grid xl:grid-cols-2 max-xl:grid-cols-1 gap-8 p-5">
             <div class="rounded border-2 border-gray-600 p-5">
                 <strong class="text-lg">Download the app!</strong>
                 <ul class="list-decimal ml-5">
@@ -250,6 +234,6 @@
                 </ul>
             </div>
         </div>
-    </figure>
+    </div>
 </article>
 }
